Tue May 04 09:44:44 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/common.c: fix compile

Mon May 03 22:02:33 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/threadsafe.c win32/winlogin.c win32/winsetup.c:
	- use correct directories under windows

Mon May 03 20:49:32 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c win32/FreeTDS.def win32/Makefile.am:
	* win32/initnet.c win32/dev-cpp/FreeTDS.dev:
	* win32/dev-cpp/Makefile.win win32/msvc6/FreeTDS.dsp:
	* win32/msvc6/Makefile.am:
	* win32/installfreetds.bat (added) win32/resource.h (added):
	* win32/setup.rc (added) win32/winlogin.c (added):
	* win32/winsetup.c (added):
	- merged Steve Kirkendall patch for win32
	- updated makefiles and projects for win32

Mon May 03 20:44:34 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: fix for sed

Sun May 02 09:29:49 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds_configs.h include/tds_sysdep_private.h:
	* src/odbc/connectparams.c src/odbc/unittests/common.c:
	* src/tds/config.c src/tds/threadsafe.c:
	- fix for path problem with win32 (not yet finished)
	* src/tds/mem.c: remve memory leak freeing dynamic
	* src/apps/bsqldb.c: remove a warning

Sat May  1 15:14:26 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in test for regex.h
	* src/apps/bsqldb.c improve multi-batch handling.

Fri Apr 30 16:15:54 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fixed SQLGetInfo

Wed Apr 28 23:04:30 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am doc/userguide.sgml
	- added links to vendor reference documentation.  
	- s/-L/-h/g: use more standard -h to test for links. 
	
Mon Apr 26 21:00:34 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/common.h src/dblib/unittests/common.c
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0002.c
	* src/dblib/unittests/t0003.c src/dblib/unittests/t0004.c