@@ -3,5 +3,5 @@ EXTRA_DIST      = config.h FreeTDS.def initnet.c \
 		tds_sysdep_public.h freetds_sysconfdir.h \
 		winsetup.c winlogin.c \
 		setup.rc resource.h \
-		installfreetds.bat
+		installfreetds.bat freetds.nsi
 
